07 login with auth, create of container and sent to firebase

--- a/ios/firebase_app_id_file.json
+++ b/ios/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:608237155140:ios:016b6456590e78d646dd11",
-  "FIREBASE_PROJECT_ID": "smiccat-f890c",
-  "GCM_SENDER_ID": "608237155140"
+  "GOOGLE_APP_ID": "1:306397029142:ios:84f4707645fccb69f4e637",
+  "FIREBASE_PROJECT_ID": "smiccat-5d93b",
+  "GCM_SENDER_ID": "306397029142"
 }
