--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -3,17 +3,17 @@
 <plist version="1.0">
 <dict>
 	<key>API_KEY</key>
-	<string>AIzaSyAHd4RgWrhOiTGz173D6bw_KShQRhcpE5k</string>
+	<string>AIzaSyDG1eTYtCNZ8XUIeH6g2yJ3oCi-DTpvvcQ</string>
 	<key>GCM_SENDER_ID</key>
-	<string>608237155140</string>
+	<string>306397029142</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>com.example.integradora21</string>
 	<key>PROJECT_ID</key>
-	<string>smiccat-f890c</string>
+	<string>smiccat-5d93b</string>
 	<key>STORAGE_BUCKET</key>
-	<string>smiccat-f890c.appspot.com</string>
+	<string>smiccat-5d93b.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -25,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:608237155140:ios:016b6456590e78d646dd11</string>
+	<string>1:306397029142:ios:84f4707645fccb69f4e637</string>
 </dict>
 </plist>
