--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   cloud_firestore: ^4.15.8
   firebase_auth: ^4.17.8
   firebase_core: ^2.27.0
+  firebase_database: ^10.4.9
   flutter:
     sdk: flutter
   flutter_dropdown: ^1.0.1+hotfix.1
