--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,9 +16,11 @@ dependencies:
   flutter_dropdown: ^1.0.1+hotfix.1
   gauges: ^1.0.0
   google_fonts: 6.1.0
+  open_file: ^3.0.4
   path_provider: ^2.1.3
   pdf: ^3.10.8
   syncfusion_flutter_gauges: ^25.1.39
+  syncfusion_flutter_pdf: ^25.1.39
   
 
 dev_dependencies:
@@ -29,4 +31,4 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets: 
-     - assets/img/
+     - assets/images/
